sermons.html  - changed card titles to subheading-2  - subheading-2 font-size changed to 18px  - fixed missing banner  - made slight changes to layout of latest and recent sermons  - changed breakpoint of card layout from md to lg  - wrapped all cards with card-shadow  - added card-button class to buttons inside card-actions

--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,7 @@ img {
 }
 
 .subheading-2 {
-    font-size: 16px !important;
+    font-size: 18px !important;
     font-weight: 500 !important;
     line-height: 28px !important;
 }
@@ -836,6 +836,9 @@ img {
 }
 
 .card .card-shadow {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
     color: currentColor;
     transition: box-shadow 400ms cubic-bezier(.25, .8, .25, 1);
 }
@@ -2977,15 +2980,6 @@ img {
     .xl-12 {
         flex-basis: 100% !important;
         max-width: 100% !important;
-    }
-    /* exclusive to sermons page */
-    .xl-latest {
-        flex-basis: 45.5% !important;
-        max-width: 45.5% !important;
-    }
-    .xl-recent {
-        flex-basis: 27.25% !important;
-        max-width: 27.25% !important;
     }
 }
 
